# archilyse-view

./: CMakeLists.txt  README.md
cmake/modules/: FindVulkan.cmake
doc/: Doxyfile
src/: app_config.h  logger.cpp  logger.h  main.cpp  quavis_service.cpp  quavis_service.h
src/compute/: area.cpp  area.h  compute_base.cpp  compute_base.h  compute_cube_map.h  groups.cpp  groups.h  sun.cpp  sun.h  volume.cpp  volume.h
src/render/: anvil.h  cube_images.cpp  cube_images.h  drawable_geometry.cpp  drawable_geometry.h  observation.h  render.cpp  render.h  scene_object.cpp  scene_object.h
src/render/materials/: material_base.cpp  material_base.h  material_env_cube.cpp  material_env_cube.h
src/utils/: image_cpu.cpp  image_cpu.h  shader_loader.cpp  shader_loader.h
test/simple/: input.json  input.yaml  output.json
